<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="button_spotify_streamer_app">Spotify Streamer</string>
    <string name="button_scores_app">Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger_app">Build It Bigger</string>
    <string name="button_reader_app">XYZ Reader</string>
    <string name="button_capstone_app">Capstone: My Own App</string>
    <string name="label_my_apps">My Nanodegree Apps!</string>

    <string name="taost_missing_app">This button will launch %s!</string>
</resources>
